Thu Sep  8 17:48:53 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdlib.cpp:
          Fixed compile warnings

        * ace/OS_NS_Thread.inl:
          Added check for ACE_LACKS_CONDATTR

        * ace/Mem_Map.cpp:
          When ACE_MMAP_NO_ZERO is defined, when the length if zero we
          default to the pagesize

Thu Sep  8 17:46:28 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-android.h:
          Further cleanup and improvements

Thu Sep  8 17:32:48 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/TP_Reactor.h:
          Typo fixed

        * ace/Process_Manager.cpp:
          Layout changes

        * ace/config-sunos5.5.h:
          Removed old comment

        * ace/Signal.h:
          Doxygen cleanup

        * ace/OS_NS_errno.inl:
          Const changes

        * ace/OS_NS_errno.h:
          Only define ACE_ERRNO_TYPE when it is not defined yet, that way we
          can just set it in config-android.h

        * ace/config-android.h:
          Cleanup and set various defines needed to get correct runtime
          behavior

        * bin/PerlACE/Process_VMS.pm:
          Chorus support removal

        * bin/PerlACE/README:
          Layout changes

        * include/makeinclude/platform_android.GNU:
          Further cleanup

Thu Sep  8 17:20:26 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_android.GNU:
          Fixed warning about not recognized --version

Thu Sep  8 17:16:26 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
        * docs/bczar/bczar.html:
          Another 32bit package for android

        * include/makeinclude/platform_android.GNU:
        * include/makeinclude/platform_android_linux.GNU:
          Renamed to platform_android.GNU

Thu Sep  8 13:20:55 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Added another 32bit package for Android
